Use kubeadm stable for systesting
This commit updated to use kubeadm stable for system testing, and
created a single base yaml file for contiv deployment, also created
a contiv-compose to update the base yaml file to support system testing,
prometheus, auth_proxy and ACI(not yet).
Update system testings to allow running netplugin on master nodes, so that
service like kube-dns and kube-dashboard could be created correctly.
Also formated ruby files and updated vagrant file so kube master could have
more memories.

Signed-off-by: Wei Tie <wtie@cisco.com>

--- a/.gitignore
+++ b/.gitignore
@@ -71,5 +71,6 @@ netplugin-version
 scripts/netContain/*.tgz
 scripts/netContain/*.tar.bz2
 
-vagrant/k8s/export/.contiv.yaml*
+vagrant/k8s/export/admin.conf
+vagrant/k8s/export/*contiv*
 vagrant/k8s/contrib
