--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -205,13 +205,17 @@ Vagrant.configure(2) do |config|
           EOS
         end
 
-        c.vm.provision :shell, path: '../../install/k8s/cluster/bootstrap_centos.sh'
+        if !ENV['CONTIV_K8S_VERSION'].nil? && !ENV['CONTIV_K8S_VERSION'].empty?
+          k8s_version = ENV['CONTIV_K8S_VERSION']
+        else
+          k8s_version = 'stable'
+        end
+
+        c.vm.provision :shell, path: '../../install/k8s/cluster/bootstrap_centos.sh', args: [k8s_version]
         if role == 'master'
           c.vm.network 'forwarded_port', guest: 9999, host: 9999
           # Install kubernetes on master
-          # With the latest 1.4.4 kube*, kubeadm hangs frequently while waiting for the control plane to be available.
-          # So using v1.4.1 as per https://github.com/kubernetes/kubernetes/issues/33729
-          c.vm.provision :shell, path: '../../install/k8s/cluster/k8smaster_centos.sh', args: [token, member_info['contiv_control_ip'], ENV['CONTIV_K8S_VERSION'] || 'stable']
+          c.vm.provision :shell, path: '../../install/k8s/cluster/k8smaster_centos.sh', args: [token, master_ip, master_port, k8s_version]
         else
           # Install kubernetes on nodes
           c.vm.provision :shell, path: '../../install/k8s/cluster/k8sworker_centos.sh', args: [token, "#{master_ip}:#{master_port}"]
