request 0.25 cpu time for netplugin

--- a/install/k8s/contiv/contiv-base.yaml
+++ b/install/k8s/contiv/contiv-base.yaml
@@ -217,6 +217,9 @@ spec:
                 configMapKeyRef:
                   name: contiv-config
                   key: contiv_netmode
+          resources:
+            requests:
+              cpu: 250m
           securityContext:
             privileged: true
           volumeMounts:
