Remove preset __SERVICEACCOUNT_TOKEN__
Having `__SERVICEACCOUNT_TOKEN__` set reduces k8s api performance
badly, before figuring out reason, set it back to "" for now

--- a/install/k8s/contiv/contiv-base.yaml
+++ b/install/k8s/contiv/contiv-base.yaml
@@ -119,7 +119,7 @@ data:
        "K8S_CA": "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt",
        "K8S_KEY": "",
        "K8S_CERT": "",
-       "K8S_TOKEN": "__SERVICEACCOUNT_TOKEN__",
+       "K8S_TOKEN": "",
        "SVC_SUBNET": "10.96.0.0/12"
     }
 
