--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -51,7 +51,7 @@ provision_k8 = <<SCRIPT
 echo 'export GOPATH=#{gopath_folder}' > /etc/profile.d/envvar.sh
 echo 'export GOBIN=$GOPATH/bin' >> /etc/profile.d/envvar.sh
 echo 'export GOSRC=$GOPATH/src' >> /etc/profile.d/envvar.sh
-echo 'export PATH=$PATH:/usr/local/go/bin:$GOBIN' >> /etc/profile.d/envvar.sh
+echo 'export PATH=$GOBIN:$PATH:/usr/local/go/bin' >> /etc/profile.d/envvar.sh
 echo 'export KUBECONFIG=/etc/kubernetes/admin.conf' >> /etc/profile.d/envvar.sh
 echo "export http_proxy='$1'" >> /etc/profile.d/envvar.sh
 echo "export https_proxy='$1'" >> /etc/profile.d/envvar.sh
@@ -141,7 +141,11 @@ Vagrant.configure(2) do |config|
 
   config.vm.synced_folder './export', '/shared'
   config.vm.synced_folder './../../../../../', '/opt/gopath/src'
-  config.vm.synced_folder './../../bin', '/opt/gopath/bin'
+
+  if !ENV['CONTIV_TEST'].nil? && !ENV['CONTIV_TEST'].empty?
+    # mount ./../../bin if it's a test
+    config.vm.synced_folder './../../bin', '/opt/gopath/bin'
+  end
 
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.scope = :box
